--- a/_partials/_box.scss
+++ b/_partials/_box.scss
@@ -3,11 +3,51 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    
 }
 
-.cards{
-    background-color: teal;
+.cards li{
+    color: white;
+    font-family: sans-serif;
+    // background-color: teal;
     height: 200px;
     margin: 20px;
     width: 200px;
+    position: relative;
+    perspective: 800px; 
+    
 }
+
+// --------------------
+
+    .front, .back {
+      /* some styling for each card */
+      position: absolute;
+      height:100%;
+      width:100%;
+      transition:all 0.5s;
+      backface-visibility:hidden;  /*This means that when it is flipped over, we don't see the back */
+    }
+
+     .front {
+      background:#a08b16; /* green */
+    }
+
+    .back {
+      background:teal; /*orange */
+    //   transform:rotateY(180deg);  /*By Default set the back to be rotate */
+    }
+
+    .card:hover .back {
+      transform:rotateY(280deg);
+    }
+
+    .card:hover .front {
+      transform:rotateY(-180deg);
+    }
+
+    .nobox{
+        visibility: hidden;
+    }
+
+    
