--- a/_partials/_box.scss
+++ b/_partials/_box.scss
@@ -50,4 +50,23 @@
         visibility: hidden;
     }
 
-    
+    .disabled{
+        position: absolute;
+      height:100%;
+      width:100%;
+      pointer-events: none;
+    }
+
+    .red{
+        background-color: red;
+    }
+
+    .blue{
+        background-color: blue;
+        pointer-events: none;
+    }
+
+    .complete{
+        background-color: green;
+        pointer-events: none;
+    }
