--- a/styles/styles.css
+++ b/styles/styles.css
@@ -243,3 +243,20 @@ a {
 
 .nobox {
   visibility: hidden; }
+
+.disabled {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  pointer-events: none; }
+
+.red {
+  background-color: red; }
+
+.blue {
+  background-color: blue;
+  pointer-events: none; }
+
+.complete {
+  background-color: green;
+  pointer-events: none; }
