--- a/_partials/_box.scss
+++ b/_partials/_box.scss
@@ -66,7 +66,11 @@
         pointer-events: none;
     }
 
-    .complete{
+    // .complete{
+    //     background-color: green;
+    //     pointer-events: none;
+    // }
+
+    .green{
         background-color: green;
-        pointer-events: none;
     }
