this is technically a functional version of the app

--- a/_partials/_box.scss
+++ b/_partials/_box.scss
@@ -58,18 +58,20 @@
     }
 
     .red{
+        //active, clicked, flipped over
         background-color: red;
     }
 
     .blue{
+        //not active, not clickable
         background-color: blue;
         pointer-events: none;
     }
 
-    // .complete{
-    //     background-color: green;
-    //     pointer-events: none;
-    // }
+    .complete{
+        background-color: green;
+        pointer-events: none;
+    }
 
     .green{
         background-color: green;
