--- a/styles/styles.css
+++ b/styles/styles.css
@@ -257,5 +257,9 @@ a {
   background-color: blue;
   pointer-events: none; }
 
+.complete {
+  background-color: green;
+  pointer-events: none; }
+
 .green {
   background-color: green; }
