--- a/_partials/_box.scss
+++ b/_partials/_box.scss
@@ -3,7 +3,13 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    
+}
+
+.appInput{
+    background-color: rgba(63, 0, 0, 0.692);
+    height: 400px;
+    margin: 20px;
+    width: 200px;
 }
 
 .cards li{
