--- a/styles/styles.css
+++ b/styles/styles.css
@@ -188,6 +188,10 @@ ul {
 a {
   text-decoration: none; }
 
+.wrapper {
+  margin: 0 auto;
+  width: 90%; }
+
 .appCards {
   -webkit-box-align: center;
   -ms-flex-align: center;
@@ -204,17 +208,38 @@ a {
   justify-content: space-between; }
 
 .appInput {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  padding: 20px;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
   background-color: rgba(63, 0, 0, 0.692);
   height: 400px;
   margin: 20px;
   width: 200px; }
 
+.cards {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap; }
+
 .cards li {
   color: white;
   font-family: sans-serif;
-  height: 200px;
+  height: 250px;
   margin: 20px;
-  width: 200px;
+  width: calc(200px - 40px);
   position: relative;
   -webkit-perspective: 800px;
   perspective: 800px; }
@@ -264,8 +289,14 @@ a {
   pointer-events: none; }
 
 .complete {
-  background-color: green;
+  border: 5px black solid;
+  background-color: transparent;
   pointer-events: none; }
 
 .green {
   background-color: green; }
+
+.inputFlex {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex; }
