--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1,4 +1,6 @@
 // GENERAL SETUP, VARIABLES, MIXINS
 
 @import '../_partials/_setup.scss';
+@import '../_partials/_globalVars.scss';
+@import '../_partials/_design.scss';
 @import '../_partials/_box.scss';
