--- a/_partials/_box.scss
+++ b/_partials/_box.scss
@@ -13,7 +13,7 @@
 .cards{
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-around;
+  justify-content: space-between;
 }
 
 .cards li{
@@ -59,14 +59,6 @@
       border: 5px solid $pumpkinSpice;
       transform:rotateY(0deg);
     }
-
-    // .card:hover .back {
-    //   transform:rotateY(180deg);
-    // }
-
-    // .card:hover .front {
-    //    transform:rotateY(-180deg)
-    // }
 
     .nobox{
         visibility: hidden;
