--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -2,5 +2,6 @@
 
 @import '../_partials/_setup.scss';
 @import '../_partials/_globalVars.scss';
-@import '../_partials/_design.scss';
+@import '../_partials/_title.scss';
+@import '../_partials/_instructions.scss';
 @import '../_partials/_box.scss';
