modal window works

--- a/_partials/_globalVars.scss
+++ b/_partials/_globalVars.scss
@@ -11,3 +11,8 @@ $red: #980036;
 
 $h1Font: 'Josefin Sans', sans-serif;
 $taglineFont: 'Rum Raisin', sans-serif;
+
+//border styles
+
+
+$cardBorders: 20px;
