--- a/_partials/_instructions.scss
+++ b/_partials/_instructions.scss
@@ -1,8 +1,35 @@
-.instructions {
+.help{
     color: $pumpkinSpice;
     display: inline-block;
     font-size: 3rem;
     margin: 0;
     padding: 10px;
-    position: absolute; top: 20px; right: 20px; //bottom: 0; left: 0;
+    position: absolute; top: 20px; right: 20px;
+}
+
+
+.modalOpen{
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    position: absolute; top: 0; right: 0; bottom: 0; left: 0;
+    z-index: 10;
+}
+
+.appInstructions{
+    color: $cream;
+    background-color: $black;
+    border: 5px solid $pumpkinSpice;
+    border-radius: $cardBorders;
+    font-family: $taglineFont;
+    font-size: 2.5rem;
+    letter-spacing: 2px;
+    line-height: 1.5;
+    display: inline-block;
+    padding: 100px 50px;
+    z-index: 20;
+    .fas {
+        position: relative;
+        right: 0; bottom: 0;
+    }
 }
