--- a/styles/styles.css
+++ b/styles/styles.css
@@ -214,7 +214,7 @@ h2,
 h3 {
   font-size: 1.25rem; }
 
-.instructions {
+.help {
   color: #E86100;
   display: inline-block;
   font-size: 3rem;
@@ -223,6 +223,40 @@ h3 {
   position: absolute;
   top: 20px;
   right: 20px; }
+
+.modalOpen {
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 10; }
+
+.appInstructions {
+  color: #E8DEC4;
+  background-color: #141414;
+  border: 5px solid #E86100;
+  border-radius: 20px;
+  font-family: "Rum Raisin", sans-serif;
+  font-size: 2.5rem;
+  letter-spacing: 2px;
+  line-height: 1.5;
+  display: inline-block;
+  padding: 100px 50px;
+  z-index: 20; }
+  .appInstructions .fas {
+    position: relative;
+    right: 0;
+    bottom: 0; }
 
 .appInput {
   border-radius: 20px;
