--- a/styles/styles.css
+++ b/styles/styles.css
@@ -222,7 +222,20 @@ h3 {
   padding: 10px;
   position: absolute;
   top: 20px;
-  right: 20px; }
+  right: 20px;
+  z-index: 10; }
+
+.disableCards {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0; }
+
+.disableCardsOpen {
+  display: block;
+  pointer-events: none;
+  z-index: 10; }
 
 .modalOpen {
   -webkit-box-align: center;
@@ -239,7 +252,7 @@ h3 {
   right: 0;
   bottom: 0;
   left: 0;
-  z-index: 10; }
+  z-index: 20; }
 
 .appInstructions {
   color: #E8DEC4;
@@ -252,7 +265,7 @@ h3 {
   line-height: 1.5;
   display: inline-block;
   padding: 100px 50px;
-  z-index: 20; }
+  z-index: 30; }
   .appInstructions .fas {
     position: relative;
     right: 0;
