cards now actually work whne the modal is closed

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -222,20 +222,10 @@ h3 {
   padding: 10px;
   position: absolute;
   top: 20px;
-  right: 20px;
-  z-index: 10; }
-
-.disableCards {
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0; }
+  right: 20px; }
 
 .disableCardsOpen {
-  display: block;
-  pointer-events: none;
-  z-index: 10; }
+  pointer-events: none; }
 
 .modalOpen {
   -webkit-box-align: center;
@@ -252,7 +242,7 @@ h3 {
   right: 0;
   bottom: 0;
   left: 0;
-  z-index: 20; }
+  z-index: 40; }
 
 .appInstructions {
   color: #E8DEC4;
@@ -265,7 +255,7 @@ h3 {
   line-height: 1.5;
   display: inline-block;
   padding: 100px 50px;
-  z-index: 30; }
+  z-index: 50; }
   .appInstructions .fas {
     position: relative;
     right: 0;
