--- a/_partials/_instructions.scss
+++ b/_partials/_instructions.scss
@@ -5,18 +5,17 @@
     margin: 0;
     padding: 10px;
     position: absolute; top: 20px; right: 20px;
-    z-index: 10;
+
 }
 
-.disableCards{
-    position: absolute; top: 0; right: 0; bottom: 0; left: 0;
-    
-}
+// .disableCards{
+//     position: absolute; top: 0; right: 0; bottom: 0; left: 0;
+
+// }
 
 .disableCardsOpen{
-    display: block;
+    // display: block;
     pointer-events: none;
-    z-index: 10;
 }
 
 .modalOpen{
@@ -24,7 +23,7 @@
     display: flex;
     justify-content: center;
     position: absolute; top: 0; right: 0; bottom: 0; left: 0;
-    z-index: 20;
+    z-index: 40;
 }
 
 .appInstructions{
@@ -38,7 +37,7 @@
     line-height: 1.5;
     display: inline-block;
     padding: 100px 50px;
-    z-index: 30;
+    z-index: 50;
     .fas {
         position: relative;
         right: 0; bottom: 0;
