--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -4,4 +4,5 @@
 @import '../_partials/_globalVars.scss';
 @import '../_partials/_title.scss';
 @import '../_partials/_instructions.scss';
+@import '../_partials/_input.scss';
 @import '../_partials/_box.scss';
