added end message

--- a/_partials/_globalVars.scss
+++ b/_partials/_globalVars.scss
@@ -7,9 +7,9 @@ $grey: #b8bbbc;
 
 // correct/incorrect
 $green: #49b675;
-$red: #980036;
+$red: #ab0031;
 
-$h1Font: 'Josefin Sans', sans-serif;
+$mainFont: 'Josefin Sans', sans-serif;
 $taglineFont: 'Rum Raisin', sans-serif;
 
 //border styles
