--- a/_partials/_input.scss
+++ b/_partials/_input.scss
@@ -1,21 +1,81 @@
-.editionInfo {
-    p{
-        color: $cream;
-        font-family: $taglineFont;
-        font-size: 1.75rem;
-        letter-spacing: 2px;
-    }
+// LANGUAGE INFORMATION
+
+.formFlex{
+    align-items: center;
+    display: flex;
+    justify-content: space-between;
 }
+
+// FORM CONTAINER 
 
 .appInput{
     border: 2px $mocha solid;
     border-radius: 20px;
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     background-color: $black;
+    padding: 0 20px;
     height: 50px;
-    margin: 20px;
+    margin: 10px;
     width: 100%;
+    .editionInfo{
+         p{
+            color: $cream;
+            font-family: $taglineFont;
+            font-size: 1.75rem;
+            letter-spacing: 2px;
+        }
+    }
+    .editionInfo,
+    form {
+        margin: 0 15px;   
+    }
+    .scoreCard{
+        justify-self: end;
+    }
+}
 
+form {
+    .user-input{
+        margin: 15px;
+        padding: 3px;
+        width: 250px;
+        &::placeholder{
+            font-family: $mainFont;
+            font-size: 1.25rem;
+        }
+    }
+    .submitButton{
+        background-color: $pumpkinSpice;
+        border: none;
+        color: $black;
+        font-family: $mainFont;
+        font-size: 1.1rem;
+        font-weight: bold;
+        padding: 5px 20px;
+        text-transform: uppercase;
+    }
+}
+
+// KEEPING SCORE
+
+.scoreCard{
+    display: flex;
+    font-family: $taglineFont;
+    font-size: 1.75rem;
+    h4{
+        margin: 0 10px;
+        text-transform: uppercase;
+    }
+    .rightAnswers{
+        color: $green;
+        ::after{
+            color: $cream;
+            content: "/";
+        }
+    }
+    .wrongAnswers{
+        color: $red;
+    }
 }
