--- a/_partials/_title.scss
+++ b/_partials/_title.scss
@@ -4,11 +4,12 @@
     text-align: center;
     position: relative;
     h1 {
-        font-family: $h1Font;
+        font-family: $mainFont;
         font-size: 4rem;
         font-weight: bold;
         letter-spacing: 3px;
         margin: 25px 0 0;
+        text-shadow: 1px 1px $mocha;
         text-transform: uppercase;
         span{
             font-size: 6rem;
