--- a/_partials/_input.scss
+++ b/_partials/_input.scss
@@ -1,4 +1,3 @@
-// LANGUAGE INFORMATION
 
 .formFlex{
     align-items: center;
@@ -10,14 +9,13 @@
 
 .appInput{
     border: 2px $mocha solid;
-    border-radius: 20px;
     display: flex;
     justify-content: space-between;
     align-items: center;
     background-color: $black;
     padding: 0 20px;
     height: 50px;
-    margin: 10px;
+    margin: 10px 0;
     width: 100%;
     .editionInfo{
          p{
@@ -46,7 +44,10 @@ form {
             font-size: 1.25rem;
         }
     }
-    .submitButton{
+}
+
+.submitButton,
+.reload{
         background-color: $pumpkinSpice;
         border: none;
         color: $black;
@@ -56,7 +57,6 @@ form {
         padding: 5px 20px;
         text-transform: uppercase;
     }
-}
 
 // KEEPING SCORE
 
