--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -5,4 +5,5 @@
 @import '../_partials/_title.scss';
 @import '../_partials/_instructions.scss';
 @import '../_partials/_input.scss';
+@import '../_partials/_buttons.scss';
 @import '../_partials/_box.scss';
